test_regress/t/t_assigndly_dynamic_notiming_bad.out
%Error-NOTIMING: t/t_assigndly_dynamic_notiming_bad.v:10:11: Delayed assignment in a non-inlined function/task requires --timing
                                                           : ... note: In instance '$unit::Cls'
   10 |       qux <= '1;
      |           ^~
                 ... For error description see https://verilator.org/warn/NOTIMING?v=latest
%Error: Exiting due to
